--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" type="image/png" href="img/shopping-cart-solid.svg">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -13,33 +14,61 @@
   </head>
 
    <body>
+       <header>
        <!--Navbar-->
        <nav class="navbar navbar-expand-lg navbar-light bg-light">
            <div class="container">
-        <a class="navbar-brand" href="index.html">
-            <img src="img/shopping-cart-solid.svg" width="30" height="30" alt="logo Orinoco"> Orinoco</a>
+               <a class="navbar-brand" href="index.html">
+                   <img src="img/shopping-cart-solid.svg" width="30" height="30" alt="logo Orinoco"> Orinoco</a>
 
-        <!--Burger button-->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <!--Burger button End-->
+               <!--Burger button-->
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                   <span class="navbar-toggler-icon"></span>
+               </button>
+               <!--Burger button End-->
 
-        <!--Navlinks accueil et panier-->
-            <div id="navbarContent" class="collapse navbar-collapse justify-content-end" >
-                <ul class="navbar-nav">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Accueil</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="panier.html">Panier</a>
-                  </li>
-                </ul>
-            </div>
-        <!--Navlinks accueil et panier End-->
-        </div>
-        </nav>
-        <!--Navbar End-->
+               <!--Navlinks accueil et panier-->
+               <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
+                   <ul class="navbar-nav">
+                       <li class="nav-item active">
+                           <a class="nav-link" href="index.html">Accueil</a>
+                       </li>
+                       <li class="nav-item">
+                           <a class="nav-link" href="panier.html">Panier</a>
+                       </li>
+                   </ul>
+               </div>
+               <!--Navlinks accueil et panier End-->
+
+           </div>
+       </nav>
+       <!--Navbar End-->
+   </header>
+   <main>
+     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis esse dignissimos alias voluptas aut modi officia eaque dolor. Perferendis quidem itaque obcaecati ea illo quis voluptas ratione quasi officiis? Expedita.</p>
+   </main>
+
+   <footer>
+  <div class="container">
+    <ul class="nav nav-pills nav-fill">
+        <li class="nav-item">
+            <a class="nav-link" href="#">Conditions générales de vente</a>
+          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Cookies</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+
+      </ul>
+    </div>
+      
+   </footer>
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
