--- a/front-end/index.html
+++ b/front-end/index.html
@@ -14,6 +14,7 @@
   </head>
 
    <body>
+       <!--Header-->
        <header>
        <!--Navbar-->
        <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -35,7 +36,7 @@
                            <a class="nav-link" href="index.html">Accueil</a>
                        </li>
                        <li class="nav-item">
-                           <a class="nav-link" href="panier.html">Panier</a>
+                           <a class="nav-link" href="panier.html"><img src="img/shopping-basket-solid.svg" width="25" height="25" alt="icone panier"></a>
                        </li>
                    </ul>
                </div>
@@ -45,29 +46,35 @@
        </nav>
        <!--Navbar End-->
    </header>
+    <!--Header End-->
+
+    <!--Main Container-->
    <main>
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis esse dignissimos alias voluptas aut modi officia eaque dolor. Perferendis quidem itaque obcaecati ea illo quis voluptas ratione quasi officiis? Expedita.</p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis esse dignissimos alias voluptas aut modi
+           officia eaque dolor. Perferendis quidem itaque obcaecati ea illo quis voluptas ratione quasi officiis?
+           Expedita.</p>
    </main>
+   <!--Main Container-->
 
+   <!--Footer-->
    <footer>
-  <div class="container">
-    <ul class="nav nav-pills nav-fill">
-        <li class="nav-item">
-            <a class="nav-link" href="#">Conditions générales de vente</a>
-          </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Cookies</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
+       <div class="container">
+           <ul class="nav nav-pills nav-fill">
+               <li class="nav-item">
+                   <a class="nav-link" href="#">Conditions générales de vente</a>
+               </li>
+               <li class="nav-item">
+                   <a class="nav-link" href="#">Cookies</a>
+               </li>
+               <li class="nav-item">
+                   <a class="nav-link" href="#">Contact</a>
+               </li>
 
-      </ul>
-    </div>
-      
+           </ul>
+       </div>
+
    </footer>
-
-
+   <!--Footer End-->
 
 
     <!-- Optional JavaScript -->
