--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" type="image/png" href="img/shopping-cart-solid.svg">
 
+ 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+       <!-- <link rel="stylesheet" href="./css/style.css"> -->
 
-    <script src="index.js"></script>
 
     <title>Bienvenue chez Orinoco ! </title>
 
@@ -53,19 +54,26 @@
     <!--Main Container-->
    <main class="main" id="main">
         <h2 class="title text-center"> Nos produits</h2>
-        <template id="templateProduct">
-            <div class="product">
-                <img class="product__image" id="product__image" alt="product image">
-                <h3 class="product__name text-center" id="product__name">NAME</h3>
-                <p class="product__price text-center" id="product__price">PRICE</p>
+
+            <div class="product"> 
+            <!-- template index.js -->
+                        <!-- <div class="card">
+                            <img src="" class="card-img-top" alt="product image">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div> -->
+              
             </div>
-        </template>
    </main>
    <!--Main Container-->
 
    <!--Footer-->
    <footer>
-       <div class="container">
+       <div class="container-fluid bg-light">
            <ul class="nav nav-pills nav-fill">
                <li class="nav-item">
                    <a class="nav-link" href="#">Conditions générales de vente</a>
@@ -89,5 +97,7 @@
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+
+<script src="index.js"></script>
+  </body> 
 </html>
