--- a/front-end/index.html
+++ b/front-end/index.html
@@ -9,8 +9,9 @@
  
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  
        <!-- <link rel="stylesheet" href="./css/style.css"> -->
-
+       <script src="https://kit.fontawesome.com/20c66add5f.js" crossorigin="anonymous"></script>
 
     <title>Bienvenue chez Orinoco ! </title>
 
@@ -55,7 +56,7 @@
    <main class="main" id="main">
         <h2 class="title text-center"> Nos produits</h2>
 
-            <div class="product"> 
+            <div class="product justify-content-center"> 
             <!-- template index.js -->
                         <!-- <div class="card">
                             <img src="" class="card-img-top" alt="product image">
