--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -8,7 +8,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="./css/style.css">
+       <script src="https://kit.fontawesome.com/20c66add5f.js" crossorigin="anonymous"></script>
     <title>Bienvenue chez Orinoco ! </title>
 
   </head>
@@ -20,7 +21,7 @@
        <nav class="navbar navbar-expand-lg navbar-light bg-light">
            <div class="container">
                <a class="navbar-brand" href="index.html">
-                   <img src="img/shopping-cart-solid.svg" width="30" height="30" alt="logo Orinoco"> Orinoco</a>
+                   <img src="img/shopping-cart-solid.svg"  alt="logo Orinoco"> Orinoco</a>
 
                <!--Burger button-->
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
