--- a/front-end/index.html
+++ b/front-end/index.html
@@ -57,7 +57,8 @@
        <h2 class="title text-center"> Nos produits</h2>
        <div class="products" id="products">
 
-           <!-- dynamique content js-->
+           <!-- dynamique content index.js-->
+           
 
        </div>
    </main>
