--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/style.css">
     
 
-    <title>Bienvenue chez Orinoco ! </title>
+    <title>Orinoco - votre panier </title>
 
   </head>
 
@@ -53,24 +53,45 @@
     <!--Header End-->
 
     <!--Main Container-->
-   <main class="main" id="main">
-       <h2 class="text-center">Votre Panier</h2>
 
-       <!-- dynamique content panier.js-->
-       <div class="product-container">
-           <div class="card card-panier" id="card panier">
-               <div class="name"> NAME </div>
-               <div class="color"> COLOR </div>
-               <div class="quantite"> QUANTITE </div>
-               <div class="prix"> PRIX </div>
+
+     <div class="table">
+       <div class="product-container-panier">
+           <h2>Votre panier</h2> 
+
+           <div class="container-recapitulatif">
+               <div>Quantite: 1
+                   Nom produit: Cross
+               </div>
+                <div>Color: Black
+                    Prix: 10999 e
+                </div>
+                <!-- <div>Quantite: 1</div>
+                <div>Nom produit:</div> 
+                <div>Color</div>
+                <div>Prix</div>  -->
            </div>
-           <div class="card card-panier" id="card panier">
-               <div class="total"> TOTAL </div>
+           <div class="container-montant-total">
+              <div> Montant total - 10999 e</div>
+              <div>Vider le panier</div>
            </div>
+                <!-- dynamique content panier.js-->
+            <!-- <div class="card table-panier">
+           <div class="panier-title">
+
+            <div>Nom</div><div>color</div><div>quantite</div><div>prix</div><div>supprimer article</div>
+
+           </div>
+     
+          <div class="panier-total">
+
+           </div>
+        </div> -->
+    </div>
        </div>
 
-   </main>
    <!--Main Container-->
+
 
    <!--Footer-->
    <footer>
