--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -59,21 +59,30 @@
     <h2 class="text-center">Votre panier</h2>
 
     <div class="product-container-panier">
-      
+<!--       
         <div class="card container-recapitulatif">
             <div>Nom produit: Cross</div>
             <div>Quantite: 1 </div>
             <div>Color: Black</div>
             <div>Prix: 10999 e</div>
-            <!-- <div><img src="./img/trash-solid.svg" alt="supprimer produit"></div> -->
-        </div>
+            <div><img src="./img/trash-solid.svg" alt="supprimer produit"></div>
+        </div> -->
         <div class=" card container-montant-total">
             <div> Montant total - 10999 e</div>
-           <button class="supprimer"><i class="fas fa-trash">Vider le panier</i></button>
+           <!-- <button class="supprimer"><i class="fas fa-trash">Vider le panier</i></button> -->
         </div>
         <!-- dynamique content panier.js-->
   
     </div>
+    <div>
+    <a href="index.html">Ajouter des produits</a>
+</div>
+<button class="supprimer">
+    <a href="panier.html">
+        Vider le panier
+    </a>
+</button>
+
 </div>
    <!--Main Container-->
 
