--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -67,16 +67,16 @@
             <div>Prix: 10999 e</div>
             <div><img src="./img/trash-solid.svg" alt="supprimer produit"></div>
         </div> -->
-        <div class=" card container-montant-total">
-            <div> Montant total - 10999 e</div>
-           <!-- <button class="supprimer"><i class="fas fa-trash">Vider le panier</i></button> -->
-        </div>
+
         <!-- dynamique content panier.js-->
   
     </div>
+    <div class=" card container-montant-total">
+        <!-- <div> Montant total - 10999 e</div> -->
+    </div>
     <div>
-    <a href="index.html">Ajouter des produits</a>
-</div>
+        <a href="index.html">Ajouter des produits</a>
+    </div>
 <button class="supprimer">
     <a href="panier.html">
         Vider le panier
