--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -74,14 +74,11 @@
     <div class=" card container-montant-total">
         <!-- <div> Montant total - 10999 e</div> -->
     </div>
-    <div>
-        <a href="index.html">Ajouter des produits</a>
+    <div class= "buttons">   
+        <button class="ajout "><a href="index.html" class=" text-white">Ajouter des produits</a></button>
+        <button class="supprimer"><a href="panier.html" class=" text-white" >Vider le panier</a></button>
     </div>
-<button class="supprimer">
-    <a href="panier.html">
-        Vider le panier
-    </a>
-</button>
+
 
 </div>
    <!--Main Container-->
