--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -56,29 +56,23 @@
     <!--Main Container-->
 
 <div class="table">
-    <h2 class="text-center">Votre panier</h2>
-
+    <h2 class="text-center" id="text-panier">Votre panier
+        <img src="img/shopping-basket-solid.svg" id="panier" alt="icone panier"></h2> 
+<div id="table__panier">
     <div class="product-container-panier">
-<!--       
-        <div class="card container-recapitulatif">
-            <div>Nom produit: Cross</div>
-            <div>Quantite: 1 </div>
-            <div>Color: Black</div>
-            <div>Prix: 10999 e</div>
-            <div><img src="./img/trash-solid.svg" alt="supprimer produit"></div>
-        </div> -->
 
         <!-- dynamique content panier.js-->
-  
+
     </div>
-    <div class=" card container-montant-total">
-        <!-- <div> Montant total - 10999 e</div> -->
-    </div>
-    <div class= "buttons">   
-        <button class="ajout "><a href="index.html" class=" text-white">Ajouter des produits</a></button>
-        <button class="supprimer"><a href="panier.html" class=" text-white" >Vider le panier</a></button>
+</div>
+    <div id="table__total">
+        <!-- dynamique total panier.js-->
     </div>
 
+    <div class="buttons">
+        <button class="ajout "><a href="index.html" class=" text-white">Ajouter des produits</a></button>
+        <button class="supprimer"><a href="panier.html" class=" text-white">Vider le panier</a></button>
+    </div>
 
 </div>
    <!--Main Container-->
