--- a/front-end/index.html
+++ b/front-end/index.html
@@ -23,8 +23,8 @@
        <!--Navbar-->
        <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
            <div class="container">
-          <a class="navbar-brand" href="index.html">
-                   <img src="img/shopping-cart-solid.svg" alt="logo Orinoco" id="logo"> ORINOCO</a>
+                <img src="img/shopping-cart-solid.svg" alt="logo Orinoco" id="logo">
+            <a class="navbar-brand  text-white" href="index.html">  ORINOCO  </a>
 
                <!--Burger button-->
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
