--- a/front-end/index.html
+++ b/front-end/index.html
@@ -21,10 +21,10 @@
        <!--Header-->
        <header>
        <!--Navbar-->
-       <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+       <nav class="navbar navbar-expand-lg navbar-light bg-light">
            <div class="container">
                 <img src="img/shopping-cart-solid.svg" alt="logo Orinoco" id="logo">
-            <a class="navbar-brand  text-white" href="index.html">  ORINOCO  </a>
+            <a class="navbar-brand " href="index.html">  ORINOCO  </a>
 
                <!--Burger button-->
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -37,10 +37,10 @@
                <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
                    <ul class="navbar-nav">
                        <li class="nav-item ">
-                           <a class="nav-link text-white" href="index.html">Accueil</a>
+                           <a class="nav-link" href="index.html">Accueil</a>
                        </li>
                        <li class="nav-item ">
-                           <a class="nav-link text-white" href="panier.html">Panier <img src="img/shopping-basket-solid.svg" id="logo__basket" alt="icone panier"></a>
+                           <a class="nav-link" href="panier.html">Panier <img src="img/shopping-basket-solid.svg" id="logo__basket" alt="icone panier"></a>
                        </li>
                    </ul>
                </div>
