--- a/front-end/confirmation.html
+++ b/front-end/confirmation.html
@@ -5,11 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" type="image/png" href="img/shopping-cart-solid.svg">
+    <script src="https://kit.fontawesome.com/20c66add5f.js" crossorigin="anonymous"></script>
 
+ 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  
+    <link rel="stylesheet" href="./css/style.css">
+    
 
-    <title>Bienvenue chez Orinoco ! </title>
+    <title>Orinoco - votre panier </title>
 
   </head>
 
@@ -19,9 +24,8 @@
        <!--Navbar-->
        <nav class="navbar navbar-expand-lg navbar-light bg-light">
            <div class="container">
-               <a class="navbar-brand" href="index.html">
-                   <img src="img/shopping-cart-solid.svg" width="30" height="30" alt="logo Orinoco"> Orinoco</a>
-
+            <img src="img/shopping-cart-solid.svg" alt="logo Orinoco" id="logo">
+            <a class="navbar-brand " href="index.html">  ORINOCO  </a>
                <!--Burger button-->
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,11 +36,11 @@
                <!--Navlinks accueil et panier-->
                <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
                    <ul class="navbar-nav">
-                       <li class="nav-item active">
+                       <li class="nav-item ">
                            <a class="nav-link" href="index.html">Accueil</a>
                        </li>
-                       <li class="nav-item">
-                           <a class="nav-link" href="panier.html"><img src="img/shopping-basket-solid.svg" width="25" height="25" alt="icone panier"></a>
+                       <li class="nav-item ">
+                           <a class="nav-link" href="panier.html">Panier <img src="img/shopping-basket-solid.svg" id="logo__basket" alt="icone panier"></a>
                        </li>
                    </ul>
                </div>
@@ -49,23 +53,30 @@
     <!--Header End-->
 
     <!--Main Container-->
-   <main>
-     CONFIRMATION DE COMMAND
-   </main>
-   <!--Main Container-->
+    <div class="table">
+        <h2 class="text-center" id="text-panier"> Votre commande
+            <div class="card container-panier-vide">
+                <p>Statut de la commande {NR}: Traitement en cours; </p>
+                   <p> Votre commande est passée, elle est en cours de traitement par l'équipe d'ORINOCO'.  </p>
+                <p>Merci!</p>
+            </div>
+    </div>
+    
+   <!--End Main Container-->
+
 
    <!--Footer-->
    <footer>
-       <div class="container">
+       <div class="container-fluid bg-secondary">
            <ul class="nav nav-pills nav-fill">
-               <li class="nav-item">
-                   <a class="nav-link" href="#">Conditions générales de vente</a>
+               <li class="nav-item ">
+                   <a class="nav-link text-white" href="#">Conditions générales de vente</a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="#">Cookies</a>
+                   <a class="nav-link text-white" href="#">Cookies</a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="#">Contact</a>
+                   <a class="nav-link text-white" href="#">Contact</a>
                </li>
 
            </ul>
@@ -80,5 +91,9 @@
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+
+
+<!-- <script src="index.js"></script> -->
+<script src="confirmation.js"></script>
+  </body> 
 </html>
