--- a/front-end/confirmation.html
+++ b/front-end/confirmation.html
@@ -57,7 +57,7 @@
         <h2 class="text-center" id="text-panier"> Votre commande
             <div class="card container-panier-vide">
                 <p>Statut de la commande {NR}: Traitement en cours; </p>
-                   <p> Votre commande est passée, elle est en cours de traitement par l'équipe d'ORINOCO'.  </p>
+                   <p> Votre commande est passée, elle est en cours de traitement par l'équipe d'ORINOCO.  </p>
                 <p>Merci!</p>
             </div>
     </div>
