--- a/front-end/confirmation.html
+++ b/front-end/confirmation.html
@@ -25,12 +25,14 @@
         <!--Navbar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <img src="img/shopping-cart-solid.svg" alt="logo Orinoco" id="logo">
-                <a class="navbar-brand " href="index.html">  ORINOCO  </a>
+                <div id="sitename">
+                    <img src="img/shopping-cart-solid.svg" alt="logo Orinoco" id="logo">
+                    <a class="navbar-brand " href="index.html">ORINOCO</a>
+                </div>
                 <!--Burger button-->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                   <span class="navbar-toggler-icon"></span>
-               </button>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
                 <!--Burger button End-->
 
                 <!--Navlinks accueil et panier-->
