--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,100 +1,99 @@
 <!doctype html>
 <html lang="fr">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" type="image/png" href="img/shopping-cart-solid.svg">
 
- 
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  
+
     <link rel="stylesheet" href="./css/style.css">
-    
+
 
     <title>Bienvenue chez Orinoco ! </title>
 
-  </head>
+</head>
 
-   <body>
-       <!--Header-->
-       <header>
-       <!--Navbar-->
-       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-           <div class="container">
-                <img src="img/shopping-cart-solid.svg" alt="logo Orinoco" id="logo">
-            <a class="navbar-brand " href="index.html">  ORINOCO  </a>
+<body>
+    <!--Header-->
+    <header>
+        <!--Navbar-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <div id="sitename">
+                    <img src="img/shopping-cart-solid.svg" alt="logo Orinoco" id="logo">
+                    <a class="navbar-brand " href="index.html">ORINOCO</a>
+                </div>
+                <!--Burger button-->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                <!--Burger button End-->
 
-               <!--Burger button-->
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                   <span class="navbar-toggler-icon"></span>
-               </button>
-               <!--Burger button End-->
+                <!--Navlinks accueil et panier-->
+                <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
+                    <ul class="navbar-nav">
+                        <li class="nav-item ">
+                            <a class="nav-link" href="index.html">Accueil</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="panier.html">Panier <img src="img/shopping-basket-solid.svg" id="logo__basket" alt="icone panier"></a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Navlinks accueil et panier End-->
 
-               <!--Navlinks accueil et panier-->
-               <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
-                   <ul class="navbar-nav">
-                       <li class="nav-item ">
-                           <a class="nav-link" href="index.html">Accueil</a>
-                       </li>
-                       <li class="nav-item ">
-                           <a class="nav-link" href="panier.html">Panier <img src="img/shopping-basket-solid.svg" id="logo__basket" alt="icone panier"></a>
-                       </li>
-                   </ul>
-               </div>
-               <!--Navlinks accueil et panier End-->
-
-           </div>
-       </nav>
-       <!--Navbar End-->
-   </header>
+            </div>
+        </nav>
+        <!--Navbar End-->
+    </header>
     <!--Header End-->
 
     <!--Main Container-->
-   <main class="main" id="main">
+    <main class="main" id="main">
 
-       <h2 class="title text-center"> Nos produits</h2>
-       <div class="products" id="products">
+        <h2 class="title text-center"> Nos produits</h2>
+        <div class="products" id="products">
 
-           <!-- dynamique content index.js-->
-           
+            <!-- dynamique content index.js-->
 
-       </div>
-   </main>
-   <!--Main Container-->
 
-   <!--Footer-->
-   <footer>
-       <div class="container-fluid bg-secondary">
-           <ul class="nav nav-pills nav-fill">
-               <li class="nav-item ">
-                   <a class="nav-link text-white" href="#">Conditions générales de vente</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link text-white" href="#">Cookies</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link text-white" href="#">Contact</a>
-               </li>
+        </div>
+    </main>
+    <!--Main Container-->
 
-           </ul>
-       </div>
+    <!--Footer-->
+    <footer>
+        <div class="container-fluid bg-secondary">
+            <ul class="nav nav-pills nav-fill">
+                <li class="nav-item ">
+                    <a class="nav-link text-white" href="#">Conditions générales de vente</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Cookies</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Contact</a>
+                </li>
 
-   </footer>
-   <!--Footer End-->
+            </ul>
+        </div>
+
+    </footer>
+    <!--Footer End-->
 
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-<script src="index.js"></script>
-  </body> 
+    <script src="index.js"></script>
+</body>
+
 </html>
-
-
-
