--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -1,113 +1,116 @@
 <!doctype html>
 <html lang="fr">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" type="image/png" href="img/shopping-cart-solid.svg">
     <script src="https://kit.fontawesome.com/20c66add5f.js" crossorigin="anonymous"></script>
 
- 
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  
+
     <link rel="stylesheet" href="./css/style.css">
-    
+
 
     <title>Orinoco - votre panier </title>
 
-  </head>
+</head>
 
-   <body>
-       <!--Header-->
-       <header>
-       <!--Navbar-->
-       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-           <div class="container">
-            <img src="img/shopping-cart-solid.svg" alt="logo Orinoco" id="logo">
-            <a class="navbar-brand " href="index.html">  ORINOCO  </a>
-               <!--Burger button-->
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                   <span class="navbar-toggler-icon"></span>
-               </button>
-               <!--Burger button End-->
+<body>
+    <!--Header-->
+    <header>
+        <!--Navbar-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <div id="sitename">
+                    <img src="img/shopping-cart-solid.svg" alt="logo Orinoco" id="logo">
+                    <a class="navbar-brand " href="index.html">ORINOCO</a>
+                </div>
+                <!--Burger button-->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                <!--Burger button End-->
 
-               <!--Navlinks accueil et panier-->
-               <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
-                   <ul class="navbar-nav">
-                       <li class="nav-item ">
-                           <a class="nav-link" href="index.html">Accueil</a>
-                       </li>
-                       <li class="nav-item ">
-                           <a class="nav-link" href="panier.html">Panier <img src="img/shopping-basket-solid.svg" id="logo__basket" alt="icone panier"></a>
-                       </li>
-                   </ul>
-               </div>
-               <!--Navlinks accueil et panier End-->
+                <!--Navlinks accueil et panier-->
+                <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
+                    <ul class="navbar-nav">
+                        <li class="nav-item ">
+                            <a class="nav-link" href="index.html">Accueil</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="panier.html">Panier <img src="img/shopping-basket-solid.svg" id="logo__basket" alt="icone panier"></a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Navlinks accueil et panier End-->
 
-           </div>
-       </nav>
-       <!--Navbar End-->
-   </header>
+            </div>
+        </nav>
+        <!--Navbar End-->
+    </header>
     <!--Header End-->
 
     <!--Main Container-->
-<div class="table">
-    <h2 class="text-center" id="text-panier">Votre panier
-        <img src="img/shopping-basket-solid.svg" id="panier" alt="icone panier"></h2>
-    <div id="table__panier">
-        <div class="product-container-panier">
+    <div class="table">
+        <h2 class="text-center" id="text-panier">Votre panier
+            <img src="img/shopping-basket-solid.svg" id="panier" alt="icone panier"></h2>
+        <div id="table__panier">
+            <div class="product-container-panier">
 
-            <!-- dynamique content panier.js-->
+                <!-- dynamique content panier.js-->
 
+            </div>
+        </div>
+        <div id="table__total">
+            <!-- dynamique total panier.js-->
+        </div>
+
+        <div class="buttons">
+            <button class="ajout text-white" onclick="window.location.href='index.html'">Ajouter des produits</button>
+            <button class="supprimer text-white" onclick="window.location.href='panier.html'">Vider le panier</button>
         </div>
     </div>
-    <div id="table__total">
-        <!-- dynamique total panier.js-->
-    </div>
-
-    <div class="buttons">
-        <button class="ajout "><a href="index.html" class=" text-white">Ajouter des produits</a></button>
-        <button class="supprimer"><a href="panier.html" class=" text-white">Vider le panier</a></button>
-    </div>
-</div>
-
- 
 
 
-   <!--Main Container-->
 
 
-   <!--Footer-->
-   <footer>
-       <div class="container-fluid bg-secondary">
-           <ul class="nav nav-pills nav-fill">
-               <li class="nav-item ">
-                   <a class="nav-link text-white" href="#">Conditions générales de vente</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link text-white" href="#">Cookies</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link text-white" href="#">Contact</a>
-               </li>
+    <!--Main Container-->
 
-           </ul>
-       </div>
 
-   </footer>
-   <!--Footer End-->
+    <!--Footer-->
+    <footer>
+        <div class="container-fluid bg-secondary">
+            <ul class="nav nav-pills nav-fill">
+                <li class="nav-item ">
+                    <a class="nav-link text-white" href="#">Conditions générales de vente</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Cookies</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Contact</a>
+                </li>
+
+            </ul>
+        </div>
+
+    </footer>
+    <!--Footer End-->
 
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 
-<!-- <script src="index.js"></script> -->
-<script src="panier.js"></script>
-  </body> 
+    <!-- <script src="index.js"></script> -->
+    <script src="panier.js"></script>
+</body>
+
 </html>
