--- a/front-end/confirmation.html
+++ b/front-end/confirmation.html
@@ -59,6 +59,8 @@
         <h2 class="text-center" id="text-panier"> Votre commande
             <div class="confirmation">
 
+                <!-- dynamique content confirmation.js-->
+
             </div>
     </div>
 
