--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -108,7 +108,7 @@
 
 
     <!-- <script src="index.js"></script> -->
-    <script src="panier.js"></script>
+    <script src="js/panier.js"></script>
 </body>
 
 </html>
