--- a/front-end/produit.html
+++ b/front-end/produit.html
@@ -87,7 +87,7 @@
 
 
     <!-- <script src="index.js"></script> -->
-    <script src="produit.js"></script>
+    <script src="js/produit.js"></script>
 </body>
 
 </html>
