--- a/front-end/confirmation.html
+++ b/front-end/confirmation.html
@@ -96,7 +96,7 @@
 
 
     <!-- <script src="index.js"></script> -->
-    <script src="confirmation.js"></script>
+    <script src="js/confirmation.js"></script>
 </body>
 
 </html>
